# syntrend

./: Containerfile  README.md  pyproject.toml
.github/: README.md
.github/workflows/: test.yaml
docs/: contributing.md  distribution_graph.py  distributions.md  expressions.md  faq.md  generators.md  index.rst  outputs.md  project_file.md  use_cases.md
syntrend/config/: model.py  parse.py
syntrend/formatters/: __init__.py  sql.py
syntrend/generators/: __base_types.py  __init__.py  choice.py  complex_object.py  string.py
syntrend/utils/: distributions.py  exc.py  filters.py  manager.py
tests/config/: test_model.py
tests/docs/: test_use_cases.py
tests/formatters/: test_ascii_table.py  test_csv.py  test_json.py  test_sql.py
tests/generators/: test_generators.py
tests/utils/: test_distributions.py  test_exceptions.py
