[project]
name = "syntrend"
version = "0.1.0"
description = ""
authors = [
    { name = "Will Siddall", email = "will.siddall@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "click",
    "faker",
    "jinja2",
    "ruamel-yaml",
]

[project.urls]
Homepage = "https://github.com/wsidl/syntrend"
Repository = "https://github.com/wsidl/syntrend"
Issues = "https://github.com/wsidl/syntrend/issues"

[project.scripts]
syntrend = "syntrend.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["W", "E4", "E7", "E9", "F", "B"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "single"  # Always preferred `blue` quoting convention over `black`
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
markers = [
    "docs",
    "unit",
    "integration",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.25.0",
    "livereload>=2.7.0",
    "matplotlib>=3.10.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.6",
]
